// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reset page renders correctly 1`] = `
<section class="section container">
  <div class="columns is-mobile is-centered">
    <div class="column is-half-desktop">
      <h1 class="title">
        Password reset
      </h1>
      <form>
        <div class="field"><label class="label">Password</label>
          <div class="control has-icons-right is-clearfix"><input type="password" autocomplete="on" aria-required="true" required="required" minlength="6" class="input">
            <!----><span class="icon is-right has-text-primary is-clickable"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
          <!---->
        </div>
        <div class="field"><label class="label">Password (confirmation)</label>
          <div class="control has-icons-right is-clearfix"><input type="password" autocomplete="on" aria-required="true" required="required" minlength="6" class="input">
            <!----><span class="icon is-right has-text-primary is-clickable"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
          <!---->
        </div> <button class="button is-primary">
          Reset my password
        </button>
      </form>
    </div>
  </div>
</section>
`;

exports[`Reset page shows error if token is invalid 1`] = `
<section class="section container">
  <div class="columns is-mobile is-centered">
    <div class="column is-half-desktop">
      <h1 class="title">
        Password reset
      </h1>
      <transition-stub name="fade">
        <article class="message is-danger">
          <header class="message-header">
            <p>Error</p><button type="button" class="delete"></button>
          </header>
          <section class="message-body">
            <div class="media">
              <!---->
              <div class="media-content">The token you provided is invalid.</div>
            </div>
          </section>
        </article>
      </transition-stub>
      <form>
        <div class="field"><label class="label">Password</label>
          <div class="control has-icons-right is-clearfix"><input type="password" autocomplete="on" aria-required="true" required="required" minlength="6" class="input">
            <!----><span class="icon is-right has-text-primary is-clickable"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
          <!---->
        </div>
        <div class="field"><label class="label">Password (confirmation)</label>
          <div class="control has-icons-right is-clearfix"><input type="password" autocomplete="on" aria-required="true" required="required" minlength="6" class="input">
            <!----><span class="icon is-right has-text-primary is-clickable"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
          <!---->
        </div> <button class="button is-primary">
          Reset my password
        </button>
      </form>
    </div>
  </div>
</section>
`;
